# vas-dj-saas-project

./: .eslintrc.js  .gitignore  CHANGELOG.md  CLAUDE.md  COMMIT-NOW.txt  CONTRIBUTING.md  GEMINI.md  GIT-HOOKS-DISABLED.md  Makefile  README.md  eslint.config.mjs  manage.py  package.json  plopfile.js  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  turbo.json
backend/: .env.example  .env.test  .git-hooks-error-help.txt  .gitignore  .pre-commit-config.yaml  CI-CD-IMPLEMENTATION-SUMMARY.md  CI-CD-SETUP.md  CLAUDE.md  CORS-FIX-SUMMARY.md  FEATURE-FLAGS-IMPROVEMENTS.md  GEMINI.md  Makefile  PRE-COMMIT-GUIDE.md  README.md  conftest.py  debug_feature_flags.py  pyproject.toml  pytest.ini  schema.json  schema.yml  task_manager.md  test-cors.html  test_user_permissions.py
backend/.claude/: settings.local.json
backend/.github/workflows/: cd.yml  ci.yml
backend/_docs/error-catalog/: account-already-exists.md  account-inactive.md  account-not-found.md  authentication-required.md  catalog.yml  downgrade-not-allowed.md  email-invalid-recipient.md  email-not-verified.md  email-rate-limit-exceeded.md  email-send-failed.md  email-service-unavailable.md  email-template-not-found.md  index.md  internal.md  invalid-credentials.md  invoice-not-found.md  method-not-allowed.md  not-found.md  org-access-denied.md  org-invite-conflict.md  org-invite-invalid.md  org-member-exists.md  org-member-limit-exceeded.md  org-not-found.md  org-owner-required.md  org-subdomain-taken.md  parse-error.md  password-reset-invalid.md  payment-failed.md  payment-method-invalid.md  permission-denied.md  plan-not-found.md  profile-update-failed.md  rate-limit-exceeded.md  registration-disabled.md  service-unavailable.md  subscription-already-active.md  subscription-not-found.md  trial-expired.md  unsupported-media-type.md  (+1 more)
backend/apps/accounts/: admin.py  codes.py  enums.py  error_catalog.yml  serializers.py  tasks.py
backend/apps/accounts/mfa/: models.py  serializers.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_add_email_verification_fields.py  0002_add_relationships.py  0003_account_account_email_idx_and_more.py  0004_add_password_reset_fields.py  0005_backupcode_totpdevice.py
backend/apps/accounts/models/: __init__.py  account.py  team.py
backend/apps/accounts/oauth/: __init__.py  providers.py  views.py
backend/apps/accounts/tests/: __init__.py  conftest.py  factories.py  test_auth_edge_cases.py  test_login_flow.py  test_models.py  test_registration_flow.py  test_registration_global_mode.py  test_views.py
backend/apps/accounts/urls/: __init__.py  api_v1.py  auth.py
backend/apps/accounts/views/: auth.py  views_v1.py
backend/apps/api_keys/: admin.py  apps.py  models.py  serializers.py  views.py
backend/apps/api_keys/migrations/: 0001_initial.py
backend/apps/api_keys/urls/: api_v1.py
backend/apps/billing/: admin.py  codes.py  error_catalog.yml  models.py  serializers.py  services.py  views.py  webhooks.py
backend/apps/billing/migrations/: 0001_initial.py  0002_invoice_external_invoice_id_and_more.py  (+2 more)
backend/apps/core/: apps.py  capabilities.py  code_registry.py  codes.py  error_catalog.yml  jwt_config.py  managers.py  mixins.py  models.py  pagination.py  permissions.py  renderers.py  responses.py  schema_hooks.py  schemas.py  views.py
backend/apps/dashboard/: serializers.py  urls.py  views.py
backend/apps/email_service/: apps.py  codes.py  error_catalog.yml  models.py  renderers.py  serializers.py  services.py  views.py
backend/apps/feature_flags/: FINAL_TEST_REPORT.md  TEST_FAILURES_ANALYSIS.md  TEST_FIXES_SUMMARY.md  admin.py  apps.py  enums.py  models.py  serializers.py
backend/apps/lib/: locales.py  log_utils.py
backend/apps/notifications/: admin.py  consumers.py  middleware.py  models.py  serializers.py  services.py  views.py
backend/apps/organizations/: TEST_STATUS.md  admin.py  codes.py  error_catalog.yml  managers.py  middleware.py  middleware_old.py  models_old.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
backend/config/: asgi.py  celery.py  log_settings.py  wsgi.py
backend/config/settings/: __init__.py  base.py  development.py  production.py  test.py  test_minimal.py
backend/config/urls/: __init__.py  api_v1.py
backend/docker/: Dockerfile  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  entrypoint.sh
backend/docker/nginx/: nginx.conf
backend/docker/prometheus/: prometheus.yml
backend/docs/: BILLING-IMPLEMENTATION.md  CI-CD-PIPELINE.md  CI-CD-QUICKSTART.md  CRITICAL-ISSUES-TRACKER.md  DEPLOYMENT-PLAYBOOK.md  GDPR-COMPLIANCE.md  OBSERVABILITY-QUICKSTART.md  OBSERVABILITY.md  PROJECT-STATUS.md  RUNBOOK.md  SECURITY-FIXES-COMPLETE.md  TEST-IMPROVEMENTS.md  TEST-RESULTS-FINAL.md  TEST-STATUS.md
backend/docs/ADRs/: 001-tenant-isolation-strategy.md  002-audit-logging-implementation.md
backend/docs/api/: ENDPOINT-STRATEGY.md  README.md  openapi-v1.0.0.json  openapi-v1.0.0.yaml
backend/docs/ci-cd/: CI-CD-IMPLEMENTATION-SUMMARY.md  CI-CD-SETUP.md
backend/docs/compliance/: soc2-controls.md
backend/docs/development/: LOCAL-DATA-SETUP.md  PRE-COMMIT-GUIDE.md  TROUBLESHOOTING-GIT-HOOKS.md
backend/docs/error-catalog/: error-codes.md
backend/docs/features/: FEATURE-FLAGS-IMPROVEMENTS.md  README.md  authentication-authorization.md  billing-subscriptions.md  feature-flags.md  org-registration-flow.md  organization-management.md  organization-membership.md  team-invitations.md  user-invitation-flow.md  user-registration-flow.md
backend/docs/guides/: security-best-practices.md  tenant-filtering-guide.md  testing-guide.md
backend/scripts/: CLEANUP_SUMMARY.md  backup.sh  build.sh  ci-cd.sh  fix-git-hooks.sh  lint.sh  pre-commit-helper.sh  restore.sh  run_api_docs.py  security.sh  setup-pre-commit.sh  test.sh  test_runner.py
backend/scripts/api-response-docs/: README.md  run_all_validations.py
backend/tasks/: accounts_test_suite.md  vas_dj_membership_based_tenancy_architecture_single_page_doc.md
backend/tests/: README.md  test_integration.py
(+453 files in other folders)
