[project]
name = "vas-dj-saas-project"
version = "0.1.0"
description = ""
authors = [
    {name = "vibbsdod",email = "vibbs.dod@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
package-mode = false
dependencies = [
    "django (>=5.2.4,<6.0.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "redis (>=6.2.0,<7.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "boto3 (>=1.39.14,<2.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "drf-spectacular (>=0.27.0,<1.0.0)",
    "stripe (>=11.3.0,<12.0.0)",
    "jinja2 (>=3.1.0,<4.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "dj-database-url (>=3.0.1,<4.0.0)",
    "python-json-logger (>=3.3.0,<4.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "djangorestframework-camel-case (>=1.4.2,<2.0.0)",
    "django-cors-headers (>=4.3.0,<5.0.0)",
    "django-ratelimit (>=4.1.0,<5.0.0)",
    "django-redis (>=5.4.0,<6.0.0)",
    "sentry-sdk[django] (>=2.0.0,<3.0.0)",
    # Testing dependencies
    "pytest (>=8.0.0,<9.0.0)",
    "pytest-django (>=4.8.0,<5.0.0)",
    "pytest-cov (>=4.0.0,<5.0.0)",
    "pytest-xdist (>=3.5.0,<4.0.0)",
    "factory-boy (>=3.3.0,<4.0.0)",
    "freezegun (>=1.4.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
